force-app/main/default/objects/sked__Availability_Template_Entry__c/sked__Availability_Template_Entry__c.object-meta.xml
<CustomObject>
    <label>Availability Template Entry</label>
    <nameField>
        <displayFormat>AVTE-{0000}</displayFormat>
        <label>Availability Template Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability Template Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>