force-app/main/default/objects/sked__Availability_Template_Entry__c/fields/sked__Availability_Template__c.field-meta.xml
<CustomField>
    <fullName>sked__Availability_Template__c</fullName>
    <label>Availability Template</label>
    <referenceTo>sked__Availability_Template__c</referenceTo>
    <relationshipLabel>Availability Template Entries</relationshipLabel>
    <relationshipName>Availability_Template_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>