force-app/main/default/objects/sked__Availability_Template_Entry__c/fields/sked__Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>sked__Finish_Time__c</fullName>
    <label>Finish Time</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>