force-app/main/default/objects/sked__Availability_Template_Entry__c/fields/sked__Is_Available__c.field-meta.xml
<CustomField>
    <fullName>sked__Is_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked, marks this resource as available during the given time period. If unchecked, marks the resource as *unavailable* during the given time period.</inlineHelpText>
    <label>Is Available</label>
    <type>Checkbox</type>
</CustomField>