force-app/main/default/objects/sked__Availability_Template_Entry__c/fields/sked__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>sked__Start_Time__c</fullName>
    <inlineHelpText>The start time in 24 hour numeric format (i.e. 2230)</inlineHelpText>
    <label>Start Time</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>