force-app/main/default/objects/sked__Availability_Template_Entry__c/fields/sked__Weekday__c.field-meta.xml
<CustomField>
    <fullName>sked__Weekday__c</fullName>
    <inlineHelpText>Select the weekday this entry will apply to.</inlineHelpText>
    <label>Weekday</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MON</fullName>
            </value>
            <value>
                <fullName>TUE</fullName>
            </value>
            <value>
                <fullName>WED</fullName>
            </value>
            <value>
                <fullName>THU</fullName>
            </value>
            <value>
                <fullName>FRI</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>SUN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>