force-app/main/default/objects/sked__Availability_Template_Entry__c/validationRules/sked__Validate_Start_Finish_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__Validate_Start_Finish_Time</fullName>
    <active>true</active>
    <errorConditionFormula>sked__Start_Time__c  &gt;=  sked__Finish_Time__c</errorConditionFormula>
    <errorMessage>Finish time must be after Start time</errorMessage>
</ValidationRule>